# plot-palette

./: .coveragerc  .cspell.json  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Chat_Templates.py  LICENSE  PHASE3_REVIEW_RESPONSE.md  PHASE3_SUMMARY.md  PLAN_REVIEW.md  README.md  TESTING_SETUP.md  bash_script.sh  commitlint.config.js  current_inference.py  docker-compose.yml  inference.service  main_dictionary.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  refactor.sh  requirements-dev.txt  requirements.txt  setup.py  start.py
.claude/: skill-runs.json
.github/: branch-protection.md  dependabot.yml  pull_request_template.md
.github/workflows/: README.md  ci.yml  claude.yml  deploy.yml  docs.yml  e2e-tests.yml  performance-test.yml  test.yml
backend/: .env.deploy.example  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  samconfig.toml  template.yaml
backend/ecs_tasks/: __init__.py
backend/ecs_tasks/worker/: Dockerfile  __init__.py  entrypoint.sh  requirements.txt  template_engine.py  worker.py
backend/example_templates/: README.md  adaptive_questions.yaml  conditional_story.yaml  multi_character_dialogue.yaml  story_with_style_include.yaml  style_instructions_fragment.yaml  template_with_macros.yaml
backend/infrastructure/cloudformation/: api-stack.yaml  iam-stack.yaml  master-stack.yaml  orchestration-stack.yaml
backend/infrastructure/parameters/: development.json  production.json  regions.json
backend/infrastructure/scripts/: backup-dynamodb.sh  build-and-push-worker.sh  deploy-lambdas.sh  deploy-multi-region.sh  deploy-nested.sh  deploy.sh  estimate-cost.sh  load-sample-templates.sh  package-lambdas.sh  rollback-stack.sh
backend/infrastructure/step-functions/: job-lifecycle.asl.json
backend/lambdas/dashboard/: __init__.py  get_cost_analytics.py  get_stats.py
backend/lambdas/jobs/: __init__.py  create_batch.py  create_job.py  delete_batch.py  delete_job.py  download_job.py  download_partial.py  get_batch.py  get_job.py  list_batches.py  list_jobs.py  stream_progress.py
backend/lambdas/notifications/: send_notification.py
backend/lambdas/quality/: get_quality.py  score_job.py  trigger_scoring.py
backend/lambdas/seed_data/: __init__.py  generate_seed_data.py  generate_upload_url.py  validate_seed_data.py
backend/lambdas/settings/: get_preferences.py  update_preferences.py
backend/lambdas/templates/: __init__.py  create_template.py  delete_template.py  export_template.py  fork_template.py  get_template.py  import_template.py  list_templates.py  list_versions.py  requirements.txt  search_templates.py  test_template.py  update_template.py
backend/sample_templates/: brainstorm.yaml  creative_writing.yaml  dialogue.yaml  poem.yaml  question_answer.yaml
backend/shared/: __init__.py  aws_clients.py  constants.py  lambda_responses.py  models.py  retry.py  template_filters.py  utils.py
docs/: DEPLOYMENT.md  DESIGN_DECISIONS.md  README.md  architecture.md  aws-setup.md  openapi.yaml  testing-conventions.md  testing-guide.md  testing-integration.md  testing-performance.md  testing-unit.md  troubleshooting.md
docs/deployment/: README.md  parameter-reference.md  troubleshooting.md
docs/plans/: Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  Phase-6.md  Phase-7.md  Phase-8.md  Phase-9.md  README.md
docs/plans/v1.2/: Phase-0.md  (+6 more)
docs/templates/: best-practices.md  custom-filters-reference.md  sample-templates.md  template-examples.md  template-syntax-guide.md
frontend/: .env.test  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
infrastructure/cloudformation/: api-stack-old.yaml  iam-stack.yaml  storage-stack.yaml
infrastructure/parameters/: staging.json
infrastructure/scripts/: build-and-push-worker.sh  deploy-frontend.sh  deploy.sh  package-lambdas.sh  update-stack.sh  upload-templates.sh  validate-parameters.sh
json_data/: Part1.json  Part2.json  Part3.json  Part4.json  Part5.json  Part6.json  Part7.json  Part8.json  Part9.json
scripts/: deploy.sh
tests/: conftest.py
tests/e2e/: conftest.py  localstack_setup.py  ministack_setup.py  test_complete_workflow.spec.ts  test_job_lifecycle.py  test_job_management.spec.ts  test_seed_data.py  test_template_creation.spec.ts  test_template_lifecycle.py
tests/fixtures/: __init__.py  dynamodb_items.py  lambda_events.py  test_users.json
tests/integration/: conftest.py  test_auth_flow.py  test_batch_jobs.py  test_budget_enforcement.py  test_checkpoint.py  test_cors.py  test_cost_analytics.py  test_cost_analytics_integ.py  test_dashboard_api.py  test_jobs_api.py  test_marketplace_integ.py  test_notifications_integ.py  test_partial_export.py  test_quality_scoring.py  test_seed_data_api.py  test_seed_generation.py  test_sse_progress_integ.py  test_template_testing.py  test_template_versions.py  test_templates_api.py  test_templates_gsi.py  test_worker.py
tests/performance/: locustfile.py
tests/unit/: conftest.py  handler_import.py  test_batch_crud.py  test_cost_analytics.py  test_cost_calculation.py  test_create_batch.py  test_create_job.py  test_download_job.py  test_download_partial.py  test_fixtures.py  test_fork_template.py  test_generate_seed_data.py  test_get_template.py  test_health.py  test_lambda_auth.py  test_lambda_aws_errors.py  test_lambda_validation.py  test_list_jobs.py  test_list_versions.py  test_models_extended.py  test_notification_preferences.py  test_quality_api.py  test_responses.py  test_score_job.py  test_search_templates.py  test_send_notification.py  test_shared.py  test_step_functions_scoring.py  test_stream_progress.py  test_template_engine.py  test_template_filters.py  test_user.py  test_utils_extended.py  test_worker_bedrock_errors.py  test_worker_budget.py  test_worker_checkpoint.py  test_worker_dynamodb_errors.py  test_worker_export.py  test_worker_s3_errors.py  test_worker_spot_interruption.py
(+102 files in other folders)
