[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-palette"
version = "0.1.0"
description = "Synthetic data generation platform using AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Plot Palette Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.6",
    "typing-extensions>=4.8.0",
    "requests>=2.32.4",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
worker = [
    "pandas>=2.1.0",
    "pyarrow>=14.0.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "moto[all]>=4.2.0",
    "requests-mock>=1.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
    "bandit>=1.7.0",
    "cfn-lint>=1.0.0",
    "boto3-stubs[dynamodb,s3,bedrock-runtime,ecs]>=1.34.0",
]

[project.urls]
"Homepage" = "https://github.com/HatmanStack/plot-palette"
"Bug Tracker" = "https://github.com/HatmanStack/plot-palette/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "lambdas*", "ecs_tasks*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "moto.*",
    "pandas.*",
    "pyarrow.*",
    "jinja2.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aws_clients",
    "constants",
    "lambda_responses",
    "models",
    "retry",
    "utils",
    "template_filters",
    "template_engine",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"lambdas/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "lambdas", "ecs_tasks"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use mocked AWS)",
    "worker: ECS worker tests",
    "slow: Slow tests (>10s)",
]
addopts = "-v --strict-markers"

# Coverage config is in root pyproject.toml (pytest runs from repo root)
